Changed hardspacing to use <code> with the CSS "white-space: pre-wrap;".  Should fix the issue described on the mailing list.

--- a/templates/BlueGrey/styles.css
+++ b/templates/BlueGrey/styles.css
@@ -103,3 +103,5 @@ DIV.difflines
 .groupname { padding-left: 0px; text-indent: -25px; margin: 3px 0 3px 0;}  
 .switchcontent { margin: 3px 0 0 20px; }
 .project { padding: 2px; }
+
+code { white-space: pre-wrap; }
