--- a/templates/Zinn/styles.css
+++ b/templates/Zinn/styles.css
@@ -103,3 +103,5 @@ DIV.newpath
 
 .groupname { padding-left: 0px; text-indent: -25px; margin: 8px 0 3px 0;}  
 .switchcontent { margin: 3px 0 0 20px; }
+
+code { white-space: pre-wrap; }
